[package]
name = "learn2slither"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
minifb = "0.28.0"
rand = "0.9.2"
rayon = "1.11.0"
rust-a-nibbler-wrapper = { version = "0.1.0", path = "../rust-a-nibbler-wrapper" }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
strum = "0.27.2"
strum_macros = "0.27.2"
